# TinyMeeting

./: .gitignore  CMakeLists.txt  Info.plist  compile_commands.json  header.hh  http_protocol.cc  http_protocol.hh  http_service.cc  http_service.hh  icon.icns  in_meeting_controller.cc  in_meeting_controller.hh  in_meeting_view.cc  in_meeting_view.hh  main.cc  meeting_model.cc  meeting_model.hh  pre_meeting_controller.cc  pre_meeting_controller.hh  pre_meeting_view.cc  pre_meeting_view.hh  resources.qrc  stream_puller.cc  stream_puller.hh  stream_pusher.cc  stream_pusher.hh  window_manager.cc  window_manager.hh
media_capture/: camera_capture.hh  camera_capture.mm  frame.hh  frame.mm
ui_utils/: toast.hh
utils/: socket_helper.hh
